--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
+    <style>
+        .text{
+            font-size: 20px;
+            color: red;
+            
+        }
+    </style>
 </head>
 <body>
     <div class="text">Resume</div>
