updated resume html

--- a/resume.html
+++ b/resume.html
@@ -93,12 +93,13 @@
                                 <li>Bootsrap / Materialize</li>
                                 <li>Version Control (GIT)</li>
                                 <li>Responsive Layout and Design</li>
+                                <li>Cross-Browser Compatibility</li>
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul class="technologies-list">
                                 <!-- <li>BEM Methodology (Naming Convention)</li> -->
-                                <li>Cross-Browser Compatibility</li>
+                                
                             </ul>
                         </div>
                     </div>
@@ -112,7 +113,7 @@
                         <li>Redux (limited)</li>
                         <li>Cake Php / Wordpress / PHP (limited)</li>
                         <li>MySQL (limited)</li>
-                        <!-- <li>Node.js (limited)</li> -->
+                        <li>Node.js (limited)</li>
                     </ul>
                 </div>
             </div>
@@ -143,7 +144,7 @@
                                     <p>Platform library integrated thrughout all products.</p>
                                 </li>
                                 <li>
-                                    <p>Entire    UI revamp and platform library integration on Company's main website <a href="https://www.pay1.in/">www.pay1.in </a>. Also used Gulp tool to automate minificatoin and versioning of assets. </p>
+                                    <p>Entire UI revamp and platform library integration on Company's main website <a href="https://www.pay1.in/">www.pay1.in </a>. Also used Gulp tool to automate minificatoin and versioning of assets. </p>
                                 </li>
                                 <li>
                                     <p>Working on new React.js based project (cannot disclose details as it is not released yet.) it is a Progressive Web App uses service-worker. Uses React.js, CSS, Responsive Layout and design. Built this project on a strict 3 month deadline exercising React.js. </p>
@@ -151,8 +152,11 @@
                                 <li>
                                     <p>One Angular 8 based project, revamp of Recharge Website with Responsive layout and design is on standby which was built from scratch. Primary code utilization included HTML5, CSS3, Sass, Angular 8, Materialize, and Git.  </p>
                                 </li>
+                                <li>
+                                    <p>Currently working on backend for an e-commerce website which uses, node.js, express, mysql. </p>
+                                </li>
                             </ul>
-                            <div class="job-contact">Brinish Britto - brinish.britto@pay1.in</div>
+                            <div class="job-contact">Contact: Brinish Britto - brinish.britto@pay1.in</div>
                             <div class="job-contact">Contact: Samir Mayekar - samir.mayekar@pay1.in</div>
                         </div>
                     </div>
