--- a/resume.html
+++ b/resume.html
@@ -89,7 +89,6 @@
                             <ul class="technologies-list">
                                 <li>HTML5 / CSS3</li>
                                 <li>Javascript / jQuery</li>
-                                <li>Angular 2+</li>
                                 <li>Bootsrap / Materialize</li>
                                 <li>Version Control (GIT)</li>
                                 <li>Responsive Layout and Design</li>
@@ -98,6 +97,8 @@
                         </div>
                         <div class="col-6">
                             <ul class="technologies-list">
+                                <li>React.js </li>
+                                <li>Redux </li>
                                 <!-- <li>BEM Methodology (Naming Convention)</li> -->
                                 <li>Ext JS (Javascript Framework)</li>
                                 <li>Highcharts, Dygraph and Slickgrid JS libraries</li>
@@ -111,8 +112,7 @@
                     <ul class="technologies-list">
                         <li>Gulp</li>
                         <li>AJAX</li>
-                        <li>React.js (limited)</li>
-                        <li>Redux (limited)</li>
+                        <li>Angular 6+ (limited)</li>
                         <li>Cake Php / Wordpress / PHP (limited)</li>
                         <li>MySQL (limited)</li>
                         <li>Node.js (limited)</li>
