--- a/resume.html
+++ b/resume.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-10">
                     <div class="job">
-                        <div class="job-title">SOFTWARE DEVELOPER</div>
+                        <div class="job-title">SOFTWARE DEVELOPER (Frontend)</div>
                         <div class="job-company-details">
                             <div class="company-details">Environnement SA India Pvt. Ltd., Navi Mumbi, Maharashtra, India, September 2020 - Present</div>
                         </div>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="job">
-                        <div class="job-title">SOFTWARE DEVELOPER</div>
+                        <div class="job-title">SOFTWARE DEVELOPER (Frontend Engineer)</div>
                         <div class="job-company-details">
                             <div class="company-details">Mindsarray Network Private Limited (formerly Mindsarray Technologies Pvt. Ltd.)(Pay1), Mumbai, Maharashtra, India, April 2018 - August 2020 (2 Yrs. 4 Mo.)</div>
                         </div>
@@ -164,10 +164,9 @@
                                     <p>One Angular 8 based project, revamp of Recharge Website with Responsive layout and design is on standby which was built from scratch. Primary code utilization included HTML5, CSS3, Sass, Angular 8, Materialize, and Git.  </p>
                                 </li>
                                 <li>
-                                    <p>Currently working on backend for an e-commerce website which uses, node.js, express, mysql. </p>
+                                    <p>Last project on which I worked here was on backend for an e-commerce website which uses, node.js, express, mysql. </p>
                                 </li>
                             </ul>
-                            <div class="job-contact">Contact: Brinish Britto - brinish.britto@pay1.in</div>
                             <div class="job-contact">Contact: Samir Mayekar - samir.mayekar@pay1.in</div>
                         </div>
                     </div>
@@ -182,7 +181,7 @@
                                     <p>Reverse engineered the alogrithm for creating hash input required for Platform Library APIs. Analysed Java and PHP based written same algorithm to convert and create library in Javascript.</p>
                                 </li>
                             </ul>
-                            <div class="job-contact">Contact: Brinish Britto - brinish.britto@pay1.in</div>
+                            <div class="job-contact">Contact: Samir Mayekar - samir.mayekar@pay1.in</div>
                         </div>
                     </div>
                 </div>
