changes made to technologies section

--- a/resume.html
+++ b/resume.html
@@ -91,13 +91,14 @@
                                 <li>Javascript / jQuery</li>
                                 <li>Bootsrap / Materialize</li>
                                 <li>Version Control (GIT)</li>
-                                <li>Responsive Layout and Design</li>
+                                <!-- <li>Responsive Layout and Design</li> -->
                                 <li>Cross-Browser Compatibility</li>
+                                <li>React.js </li>
+
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul class="technologies-list">
-                                <li>React.js </li>
                                 <li>Redux </li>
                                 <!-- <li>BEM Methodology (Naming Convention)</li> -->
                                 <li>Ext JS (Javascript Framework)</li>
@@ -112,8 +113,8 @@
                     <ul class="technologies-list">
                         <li>Gulp</li>
                         <li>AJAX</li>
-                        <li>Angular 6+ (limited)</li>
-                        <li>Cake Php / Wordpress / PHP (limited)</li>
+                        <!-- <li>Angular 6+ (limited)</li>
+                        <li>Cake Php / Wordpress / PHP (limited)</li> -->
                         <li>MySQL (limited)</li>
                         <li>Node.js (limited)</li>
                     </ul>
