removed career objective

--- a/resume.html
+++ b/resume.html
@@ -75,7 +75,7 @@
                     PROFILE
                 </div>
                 <div class="col-10">
-                    <p>Motivated software developer with advanced knowledge of Frontend Web Technologies, learning on fly ability, and the desired to adopt the best practices of a professional team. Career Objective: Contribute to the development of a highly competitive product, improving user experience, and enhancing the reputation of the company as whole. Aspiring to become full-stack web developer.</p>
+                    <p>Motivated software developer with advanced knowledge of Frontend Web Technologies, learning on fly ability, and the desired to adopt the best practices of a professional team. Aspiring to become full-stack web developer.</p>
                 </div>
             </div>
             <div class="row resume-section bottom-border">
