--- a/resume.html
+++ b/resume.html
@@ -113,8 +113,8 @@
                     <ul class="technologies-list">
                         <li>Gulp</li>
                         <li>AJAX</li>
-                        <!-- <li>Angular 6+ (limited)</li>
-                        <li>Cake Php / Wordpress / PHP (limited)</li> -->
+                        <li>Angular 6+ (limited)</li>
+                        <!-- <li>Cake Php / Wordpress / PHP (limited)</li> -->
                         <li>MySQL (limited)</li>
                         <li>Node.js (limited)</li>
                     </ul>
