tailwind css added

--- a/resume.html
+++ b/resume.html
@@ -177,6 +177,7 @@
                   <!-- <li>Responsive Layout and Design</li> -->
                   <li>Cross-Browser Compatibility</li>
                   <li>React.js</li>
+                  <li>Tailwind CSS</li>
                 </ul>
               </div>
               <div class="col-6">
