tailwind css added

--- a/resume.html
+++ b/resume.html
@@ -228,18 +228,14 @@
                   My current role is to create wireframes, design a UI/UX and
                   code same UI into a React App.
                 </p>
-              </div>
-              <div class="job-details">
                 <p>
-                  Worked for Fujitsu Limited, on Wipro's payroll, main
-                  technologies used are Javascript, HTML, CSS. Framework used
-                  Ext Js 7.2.0, along with it got to use Highcharts 5.0.2. Got
-                  to learn Jasmine framework for automation unit testing.
+                  Worked on two projects, till now. One of it is in React Js and uses Open Street Maps.
+                  To summarize the working its a map based app similar to google maps but shows proprietory
+                  Mercedes data.
                 </p>
                 <p>
-                  Project worked on is a networking project, where we analyse
-                  behavior of the Network elements, creating network designs in
-                  UI, etc.
+                  Other app's working is similar to that of github where we can navigate to grafana screens
+                  from this app, and provide comments and keep a track of the history which developer has worked on it.
                 </p>
               </div>
             </div>
@@ -283,12 +279,15 @@
                 <p>
                   Was assiged on various product websites of Pay1 B2B Platform,
                   such as Recharge, Domestic Money Transfer (DMT), Travel,
-                  E-commerce and Main Website as Frontend Engineer. Currently
-                  working on React.js based project, which is based on consumer
-                  engagement game.It included integration of in-house APIs to
-                  these platforms and also third party APIs from vendors. Used
-                  the Agile Methodology and Git for Version Control. Primary
+                  E-commerce and Main Website as Frontend Engineer. Last project
+                  worked was based on React.js, which was based on consumer
+                  engagement game. It included integration of in-house APIs to
+                  these platform and also third party APIs from vendors. </p>
+                <p>
+                  Used the Agile Methodology and Git for Version Control. Primary
                   code utilization included HTML5, CSS3, Javascript and Git.
+                </p>
+                <p>
                   Project wise details as follows:
                 </p>
                 <ul>
