tailwind css added-fujitsu

--- a/resume.html
+++ b/resume.html
@@ -228,14 +228,18 @@
                   My current role is to create wireframes, design a UI/UX and
                   code same UI into a React App.
                 </p>
+              </div>
+              <div class="job-details">
                 <p>
-                  Worked on two projects, till now. One of it is in React Js and uses Open Street Maps.
-                  To summarize the working its a map based app similar to google maps but shows proprietory
-                  Mercedes data.
+                  Worked for Fujitsu Limited, on Wipro's payroll, main
+                  technologies used are Javascript, HTML, CSS. Framework used
+                  Ext Js 7.2.0, along with it got to use Highcharts 5.0.2. Got
+                  to learn Jasmine framework for automation unit testing.
                 </p>
                 <p>
-                  Other app's working is similar to that of github where we can navigate to grafana screens
-                  from this app, and provide comments and keep a track of the history which developer has worked on it.
+                  Project worked on is a networking project, where we analyse
+                  behavior of the Network elements, creating network designs in
+                  UI, etc.
                 </p>
               </div>
             </div>
