--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,9 @@
     <div class="container">
       <section class="header bottom-border">
         <div class="row">
+          <!-- <div class="col-2 p-1">
+            <img src="./assets/img/DSC_0063.jpg" alt="" srcset="" width="100px">
+          </div> -->
           <div class="col-12">
             <div id="name">Smitesh Mangelkar</div>
             <div id="address">
@@ -247,7 +250,7 @@
               <div class="job-title">SOFTWARE DEVELOPER (Frontend)</div>
               <div class="job-company-details">
                 <div class="company-details">
-                  Environnement SA India Pvt. Ltd., Navi Mumbia, Maharashtra,
+                  Environnement SA India Pvt. Ltd., Navi Mumbai, Maharashtra,
                   India, September 2020 - July 2022
                 </div>
               </div>
